@@ -1,3 +1,11 @@
+2011-05-27  Colin Watson  <cjwatson@ubuntu.com>
+
+	* grub-core/kern/emu/hostdisk.c (linux_find_partition): Give up
+	after ten consecutive open failures.  Scanning all the way up to
+	10000 is excessive and can cause serious performance problems in
+	some configurations.
+	Fixes Ubuntu bug #787461.
+
 2011-05-21  Vladimir Serbinenko  <phcoder@gmail.com>
 
 	* grub-core/disk/arc/arcdisk.c (reopen): Close old handle before
